feat(site): add ethos and about us

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author: Pravara Partners
 navbar-links:
   About: "/#aboutus"
   Values: "/#clients"
-  Contact Us: "/contact"
+  Contact: "/contact"
 
 title-img:
 
